# Forge

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  DEPLOY.md  PERFORMANCE_REPORT.md  README.md  context.md  continue.md  devforge_api_documentation.docx  mapping_report.md  package-lock.json  package.json  pnpm-lock.yaml  reference.md  tailwind.config.js  tsconfig.base.json  turbo.json  webpack.config.js
actual stuff/: redis-key-structure.md  testblueprint.json
apps/dashboard/: .env.example  next.config.ts  package.json
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/components/: activity-rail.tsx  health-ring.tsx  incident-card.tsx  incident-feed.tsx  stat-cards.tsx  topbar.tsx
apps/dashboard/src/components/incidents/: incident-detail.tsx  reasoning-stream.tsx
apps/dashboard/src/components/shell/: sidebar.tsx
apps/dashboard/src/components/topology/: cluster-map.tsx
apps/dashboard/src/components/ui/: drawer.tsx  form.tsx  sparkline.tsx  toast.tsx
apps/dashboard/src/components/views/: lab-view.tsx  settings-view.tsx
apps/dashboard/src/hooks/: useClusterFeed.ts
apps/dashboard/src/lib/: config.ts  format.ts  scenario.ts
apps/extension/: esbuild.mjs  package.json  tsconfig.json
apps/extension/src/: analyzer.ts  api.ts  config.ts  extension.ts  language.ts  store.ts
apps/extension/src/features/: cluster-incidents.ts  cost-status-bar.ts  dashboard-view.ts  security-gate.ts
apps/marketing/: .env.example  .eslintrc.json  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/marketing/src/app/: globals.css  layout.tsx  page.tsx
apps/marketing/src/components/: theme-provider.tsx
apps/marketing/src/components/nav/: footer.tsx  logo.tsx  page-rail.tsx  top-nav.tsx
apps/marketing/src/components/sections/: cta.tsx  features.tsx  hero.tsx  how-it-works.tsx  modes.tsx  tech-stack.tsx
backend/: .env.example  README.md  config.py  main.py  requirements.txt
backend/middleware/: auth.py
backend/models/: requests.py  responses.py
backend/routers/: analyze.py  diagnose.py  health.py
backend/services/: bedrock_service.py
cli/: Cargo.toml  README.md
cli/src/: client.rs  display.rs  main.rs
demo/: README.md  SCRIPT.md  down.ps1  down.sh  kind-config.yaml  run-local.ps1  run-local.sh  sim.ps1  sim.sh  up.ps1  up.sh  workloads.yaml
deploy/eks/: README.md  cluster.yaml
deploy/helm/devforge-os/: Chart.yaml  README.md  values.yaml
deploy/helm/devforge-os/crds/: remediationpolicy.yaml
deploy/helm/devforge-os/templates/: _helpers.tpl  controlplane.yaml  operator.yaml  rbac.yaml  remediationpolicy.yaml  secret.yaml
deploy/manifests/: control-plane.yaml
forge/: README.md  package-lock.json  package.json  tsconfig.json
forge/src/: extension.ts
forge/src/extension/: apiClient.ts  argueMode.ts  benchmarkRunner.ts  blueprintManager.ts  comprehensionValidator.ts  costCalculator.ts  driftDetector.ts  fileWatcher.ts  mockData.ts  performanceMonitor.ts  scalePredictor.ts  securityScanner.ts  serviceDetector.ts  skillTracker.ts  statusBar.ts
forge/src/shared/: types.ts
forge/src/test/: extension.test.ts
forge/src/webviews/: styles.css  vscodeApi.ts
forge/src/webviews/components/: ArchitectureDiagram.tsx  BlueprintForm.tsx  JustificationModal.tsx  LiveMap.tsx  MessageBubble.tsx  QuizModal.tsx  RiskScoreCard.tsx  SecurityGateModal.tsx
forge/src/webviews/components/chat/: ArchitectureReport.tsx  ChatInput.tsx  ChatView.tsx  ModelSelector.tsx
forge/src/webviews/components/developer/: CostPanel.tsx  DeveloperDashboard.tsx  DriftPanel.tsx  ScalePanel.tsx
forge/src/webviews/components/student/: MentorPanel.tsx  PatternsPanel.tsx  SkillsPanel.tsx  (+1 more)
forge/src/webviews/panels/: LeftPanel.tsx  RightPanel.tsx
frontend/: .env.example  package.json
frontend/src/: App.tsx
frontend/src/devforge/: extension.ts  types.ts
frontend/src/devforge/layers/: layer1-cost-ticker.ts  layer1-mentor-console.tsx  layer1-overlay.tsx  layer1-risk-panel.tsx  layer2-validation-hooks.ts  layer3-critical-gates.ts
frontend/src/devforge/services/: api-client.ts
frontend/src/devforge/store/: architecture-store.ts
infra/cdk/: README.md  cdk.json  package.json  tsconfig.json
infra/cdk/lib/: control-plane-stack.ts
lambdas/: detect_patterns.py  generate_quiz.py  predict_scale.py
operators/k8s/: Dockerfile  README.md  pyproject.toml  requirements.txt
operators/k8s/devforge_operator/: __init__.py  client.py  config.py  detectors.py  main.py  remediator.py  simulator.py
operators/k8s/manifests/: crd.yaml  operator.yaml  rbac.yaml
operators/k8s/tests/: test_detectors.py
release/: INSTALLATION.md  devforge-extension-0.0.1.vsix
sample-project/: README.md  index.js
sample-project/.devforge/: architecture.json
services/cli/: Cargo.toml  package.json
services/cli/src/: client.rs  context.rs  display.rs  main.rs
services/control-plane/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml
services/control-plane/alembic/: env.py
services/control-plane/alembic/versions/: d5c33d1c6ea1_initial_schema.py
services/control-plane/app/: __init__.py  config.py  deps.py  main.py
services/control-plane/app/db/: __init__.py  repository.py  session.py
services/control-plane/app/middleware/: audit.py  tenant.py
services/control-plane/app/models/: __init__.py  audit.py  base.py  incident.py  policy.py  remediation.py  snapshot.py  tenant.py
services/control-plane/app/routers/: health.py
services/control-plane/app/routers/v1/: analysis.py  auth.py  blueprints.py  cost.py  diagnose.py  drift.py  k8s.py  mentor.py  patterns.py  quiz.py  risk.py  scale.py  security.py
services/control-plane/app/schemas/: analysis.py  common.py  k8s.py
services/control-plane/app/services/: bedrock.py  eventbus.py  k8s_rca.py  prompts.py
services/control-plane/app/services/ai/: __init__.py  base.py  bedrock_provider.py  factory.py  offline_provider.py  openai_provider.py
services/control-plane/tests/: conftest.py  test_ai.py  test_k8s_api.py  test_k8s_rca.py
