[package]
name = "devforge-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devforge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.1"
home = "0.5"

[dev-dependencies]
