[project]
name = "devforge-control-plane"
version = "0.1.0"
description = "DevForge control plane — FastAPI backend for architecture-first analysis, multi-tenant, AWS Bedrock powered."
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
authors = [{ name = "DevForge" }]

dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "boto3>=1.35.85",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.1",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "types-boto3>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "B", "A", "C4", "DTZ", "T20", "RET", "SIM",
    "ARG", "PTH", "PL", "RUF",
]
ignore = ["PLR0913", "PLR0911"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
